<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="My_plan.Rats.RatsActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ToolbarStyle" >
        <TextView
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:id="@+id/toolbar_title"
            android:text="Rats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:id="@+id/toolbar_title2"
            android:text="English"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />

    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/rb1"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/setbar_bg"
                android:text="@string/R1"
                android:textSize="20dp"
                android:gravity="center"
                android:textColor="@color/black">
            </Button>


            <Button
                android:id="@+id/rb2"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/setbar_bg"
                android:text="@string/R2"
                android:textSize="20dp"
                android:gravity="center"
                android:textColor="@color/black">
            </Button>

            <Button
                android:id="@+id/rb3"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/setbar_bg"
                android:text="@string/R3"
                android:textSize="20dp"
                android:gravity="center"
                android:textColor="@color/black">
            </Button>

            <Button
                android:id="@+id/rb4"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/setbar_bg"
                android:text="@string/R4"
                android:textSize="20dp"
                android:gravity="center"
                android:textColor="@color/black">
            </Button>

            <Button
                android:id="@+id/rb5"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/setbar_bg"
                android:text="@string/R5"
                android:textSize="20dp"
                android:gravity="center"
                android:textColor="@color/black">
            </Button>

            <Button
                android:id="@+id/rb6"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/setbar_bg"
                android:text="@string/R6"
                android:textSize="20dp"
                android:gravity="center"
                android:textColor="@color/black">
            </Button>

            <Button
                android:id="@+id/rb7"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/setbar_bg"
                android:text="@string/R7"
                android:textSize="20dp"
                android:gravity="center"
                android:textColor="@color/black">
            </Button>

            <Button
                android:id="@+id/rb8"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/setbar_bg"
                android:text="@string/R8"
                android:textSize="20dp"
                android:gravity="center"
                android:textColor="@color/black">
            </Button>

            <Button
                android:id="@+id/rb9"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/setbar_bg"
                android:text="@string/R9"
                android:textSize="20dp"
                android:gravity="center"
                android:textColor="@color/black">
            </Button>

            <Button
                android:id="@+id/rb10"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/setbar_bg"
                android:text="@string/R10"
                android:textSize="20dp"
                android:gravity="center"
                android:textColor="@color/black">
            </Button>
        </LinearLayout>
    </ScrollView>

</LinearLayout>